--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,8 +3,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # SQL
-# spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
