--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,7 +8,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-# JPA
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto = update
+# # JPA
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.hibernate.ddl-auto = update
