--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,4 +11,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 # # JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
