--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
-# DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/os
-spring.datasource.username=postgres
-spring.datasource.password=46773417
+# # DB
+# spring.datasource.url=jdbc:postgresql://localhost:5432/os
+# spring.datasource.username=postgres
+# spring.datasource.password=46773417
 
-# JPA
-spring.jpa.hibernate.ddl-auto=
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# # JPA
+# spring.jpa.hibernate.ddl-auto=
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
