--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,14 +1,14 @@
-# H2
+### Enable H2 Console Access
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# SQL
-spring.datasource.url=jdbc:h2:file~/testdb
+### Define H2 Datasource configurations
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create
 
-# # JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto = create
